--- a/templates/vinyl/browse.html.twig
+++ b/templates/vinyl/browse.html.twig
@@ -1,19 +1,24 @@
 {% extends 'base.html.twig' %}
 
+{% block title%}
+    {{genre ? genre : "Todos los Géneros"}}
+{% endblock %}
+
+
 {% block body %}
 <div class="container">
-    <h1>Browse Vinyl Mixes</h1>
+    <h1>Browse {{genre ? genre : "Todos los Géneros"}}</h1>
 
     <h2 class="mt-5 mb-4">Filter by Genre</h2>
     <ul class="genre-list ps-0 mt-2 mb-3">
         <li class="d-inline">
-            <a class="btn btn-primary btn-sm" href="#">Pop</a>
+            <a class="btn btn-primary btn-sm" href="{{path('app_browse', {slug: 'pop'})}}">Pop</a>
         </li>
         <li class="d-inline">
-            <a class="btn btn-primary btn-sm" href="#">Rock</a>
+            <a class="btn btn-primary btn-sm" href="{{path('app_browse', {slug: 'Rock'})}}">Rock</a>
         </li>
         <li class="d-inline">
-            <a class="btn btn-primary btn-sm" href="#">Heavy Metal</a>
+            <a class="btn btn-primary btn-sm" href="{{path('app_browse', {slug: 'heavy metal'})}}">Heavy Metal</a>
         </li>
     </ul>
 
